--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -3,7 +3,8 @@
 .pushmore-index{
   width: 100%;
   height: 100%;
-  overflow-x: hidden;
+  overflow: hidden;
+  // overflow-x: hidden;
   overflow-y: scroll;
   background-color: @backgroundLightGrey;
  .head{
@@ -210,11 +211,27 @@
    background-color: @backgroundWhite;
    border-radius: 8px;
    box-sizing: border-box;
+   .van-field__clear{
+     font-size: 20px !important;
+     margin-right: 10px;
+   }
    .van-cell{
     width: 95% !important;
     margin: auto !important;
     padding: 0;
     border-bottom: 1px solid @backgroundLightGrey;
+   }
+   .van-cell__title, .van-cell__value{
+    -webkit-box-flex: none !important; 
+    -webkit-flex: none !important; 
+    flex: none !important; 
+    // width: 25% !important;
+   }
+   .van-cell__title{
+     width: 25%;
+   }
+   .van-cell__value{
+     width: 75%;
    }
    .van-field__label{
     height: 40px;
