--- a/src/styles/theme.less
+++ b/src/styles/theme.less
@@ -1,7 +1,8 @@
 
 @backgroundBlue: #0066cb; // 蓝色背景
 @backgroundWhite: #fff; // 白色背景
-@backgroundLightGrey: #f3f3f3; // 浅灰色背景
+@backgroundLightGrey: #f3f3f3; // 浅灰色背景1
+@backgroundShallow: #dcdcdc; // 浅灰背景2
 @orangeColor: #ff6600; // 橙色字体
 @whiteColor: #fff; // 白色字体
 @greyColor: #999; //字体灰色
