--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -183,6 +183,7 @@
      align-items: center;
      box-sizing: border-box;
      border-bottom: 1px solid @backgroundLightGrey;
+     position: relative;
      .icon{
        width: 10%;
        text-align: center;
@@ -190,8 +191,24 @@
        color: @borderColor;
      }
      .icon-middle{
-       color: @purpleColor;
+      color: @purpleColor;
      }
+      
+      .card-circle{
+        position: absolute;
+        left: 34%;
+        font-size: 18px;
+        animation: circle 1s ease infinite both;
+        color: @purpleColor;
+      }
+      .card-finger{
+        position: absolute;
+        top: 29%;
+        left: 35.3%;
+        font-size: 25px;
+        animation: finger 1s ease infinite both;
+        color: @purpleColor;
+      }
      .icon-right{
        color: @lightOrangeColor;
      }
@@ -202,6 +219,11 @@
        display: flex;
        flex-wrap: nowrap;
        align-items: center;
+       .card{
+        color: @purpleColor;
+        font-size: 18px;
+         animation: finger 1s ease infinite both;
+       }
        .remaining-time{
           color: @orangeColor;
           display: flex;
@@ -506,7 +528,7 @@
     margin-top: 15px;
     overflow: hidden;
     .order-img{
-      width: 20%;
+      width: 24%;
       height: 80px;
       margin-right: 10px;
       box-sizing: border-box;
@@ -602,13 +624,13 @@
       overflow: hidden;
       box-sizing: border-box;
       .head-portrait{
-        width: 70px;
-        height: 70px;
+        width: 48px;
+        height: 48px;
         border-radius: 50%;
         margin-right: 10px;
       }
       .name{
-        width: 25%;
+        width: 33%;
         // max-width: 35%;
         // margin-right: 8px;
         overflow: hidden;
@@ -623,7 +645,7 @@
         color: @backgroundBlue;
       }
       .sweep-code{
-        width: 70%;
+        width: 62%;
         white-space: nowrap;
         overflow: hidden;
         line-height: 25px;
@@ -669,29 +691,32 @@
     font-size: 50px;
     animation: finger 1s ease infinite both;
   }
-  @keyframes finger{
-    0% {
-      transform: none;
-  }
-  70% {
-      transform: scale3d(.8, .8, .8);
-  }
-  100% {
-      transform: none;
-  }
-  }
-  @keyframes circle {
-    0% {
-      opacity: 0;
-      transform: scale3d(0, 0, 0);
-  }
-  70% {
-      opacity: 1;
-      transform: scale3d(1.2, 1.2, 1.2);
-  }
-  100% {
-      opacity: 0;
-      transform: scale3d(0, 0, 0);
-  }
-  }
+  
+}
+
+@keyframes finger{
+  0% {
+    transform: none;
+}
+70% {
+    transform: scale3d(.8, .8, .8);
+}
+100% {
+    transform: none;
+}
+}
+
+@keyframes circle {
+  0% {
+    opacity: 0;
+    transform: scale3d(0, 0, 0);
+}
+70% {
+    opacity: 1;
+    transform: scale3d(1.2, 1.2, 1.2);
+}
+100% {
+    opacity: 0;
+    transform: scale3d(0, 0, 0);
+}
 }
