--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -116,7 +116,7 @@
         .bar-span{
           width: 26px;
           height: 26px;
-          line-height: 26px;
+          line-height: 27px;
           text-align: center;
           background-color: @backgroundShallow;
           border-radius: 50px;
@@ -125,7 +125,7 @@
         }
         .bgk-bar{
           box-shadow: 0px 0px 10px 1px #ff6600;
-          animation:bgkBar 1s ease infinite both ;
+          animation:bgkBar 1s ease infinite both;
         }
         @keyframes bgkBar {
           0% {transform: none;}
@@ -210,6 +210,8 @@
        display: flex;
        flex-wrap: nowrap;
        align-items: center;
+       overflow: hidden;
+       white-space: nowrap;
        .card{
         color: @purpleColor;
         font-size: 18px;
@@ -218,8 +220,9 @@
        .remaining-time{
           color: @orangeColor;
           display: flex;
-       flex-wrap: nowrap;
-       margin-left: 5px;
+          flex-wrap: nowrap;
+          font-size: 12px;
+          margin-left: 35px;
           .remaining-icon{
             display: block;
             margin-top: -5px;
@@ -259,18 +262,18 @@
    width: 95%;
    margin: auto;
    border-radius: 5px;
-   max-height: 250px;
    overflow: hidden;
-   overflow-y: auto;
    margin-top: 10px;
    box-sizing: border-box;
    padding: 10px;
   background-color: @backgroundWhite;
   p{
-    white-space: normal;
-    word-wrap: break-word;
-    word-break: break-all;
-    padding: 5px;
+    text-align:left;
+    text-align: justify;
+    text-indent:2em;
+    box-sizing: border-box;
+    padding: 5px 0px;
+    line-height: 25px;
   }
  }
  .exchange-rules{
@@ -672,22 +675,6 @@
   .codeImg{
     width: 100%;
     height: 100%;
-  }
-  i{
-    position: absolute;
-    color: @backgroundBlue;
-  }
-  .circle{
-     bottom: 22%;
-     left: 69%;
-     font-size: 25px;
-     animation: circle 1s ease infinite both;
-  }
-  .finger{
-    bottom: 19%;
-    left: 69%;
-    font-size: 50px;
-    animation: finger 1s ease infinite both;
   }
   
 }
