优化进度条页面

--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -70,7 +70,7 @@
     }
   }
   .rank_tb{
-    padding:10px 0px !important;
+    padding:5px 0px 10px 0px!important;
   }
   ul{
     width: 95%;
@@ -113,6 +113,10 @@
           box-sizing: border-box;
           color: @whiteColor;
         }
+      }
+      .zs-text{
+        font-size:12px;
+        margin-top:5px;
       }
       .bar-spancolor{
         color: @orangeColor;
