区外推多多

--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -50,6 +50,18 @@
   text-align: center;
   box-sizing: border-box;
 }
+.switch-but{
+  box-sizing: border-box;
+  position: absolute;
+  top: 60px;
+  right: 0;
+  writing-mode:vertical-lr;
+  padding: 5px 7px 5px 0px;
+  border-radius: 5px 0px 0px 5px;
+  background-color: @orangeColor;
+  color: @whiteColor;
+  text-align: center;
+}
  .progress-bar{
   background-color: @backgroundWhite;
   padding-bottom: 10px;
@@ -400,7 +412,7 @@
         }
       }
       .marg-top{
-        margin-top: 10px;
+        // margin-top: 10px;
       }
     }
    }
