--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -14,7 +14,8 @@
  .head{
    width: 100%;
    height: 100px;
-   background-color: @backgroundBlue;
+  //  background-color: @backgroundBlue;
+   background: linear-gradient(to left, @lightOrangeColor 0%, @orangeColor 100%);
    color: @whiteColor;
    display: flex;
    flex-wrap: nowrap;
@@ -53,7 +54,7 @@
 .switch-but{
   box-sizing: border-box;
   position: absolute;
-  top: 60px;
+  top: 50px;
   right: 0;
   writing-mode:vertical-lr;
   padding: 5px 7px 5px 0px;
@@ -66,6 +67,7 @@
   background-color: @backgroundWhite;
   padding-bottom: 10px;
   box-sizing: border-box;
+  margin-top: 10px;
   .van-dialog__header{
     font-size: 20px !important;
     color: @backgroundBlue;
@@ -116,14 +118,19 @@
         margin-top: -20px;
         overflow: hidden;
         .progress{
-          width: 50px;
-          height: 50px;
-          padding-top: 3px;
+          width: 45px;
+          height: 45px;
           text-align: center;
           background-color: @orangeColor;
           border-radius: 50px;
-          box-sizing: border-box;
           color: @whiteColor;
+          display: flex;
+          flex-wrap:wrap;
+          padding: 3px;
+          i{
+            width: 100%;
+            font-style:normal;
+          }
         }
       }
       .zs-text{
@@ -351,7 +358,8 @@
      height: 50px;
      line-height: 50px;
      text-align: center;
-     background-color: @backgroundBlue;
+    //  background-color: @backgroundBlue;
+    background: linear-gradient(to left, @lightOrangeColor 0%, @orangeColor 100%);
      color: @whiteColor;
      font-size: 20px;
      border-radius: 8px 8px 0px 0px;
@@ -445,7 +453,8 @@
        background-color: @greyColor;
      }
      .bgkblue{
-      background-color: @backgroundBlue;
+      // background-color: @backgroundBlue;
+      background: linear-gradient(to left, @lightOrangeColor 0%, @orangeColor 100%);
      }
      .butts{
        width: 35%;
@@ -470,6 +479,74 @@
  .had-text{
   padding: 0px 10px 15px;
   text-align: center;
+ }
+ .pop{
+  background-color: rgba(0, 0, 0, 0) !important;
+  .red_envelopes{
+    width: 85%;
+    height: 400px;
+    margin: auto;
+    position: relative;
+    box-sizing: border-box;
+    img{
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      z-index: -1;
+    }
+    .red_cont{
+      width: 100%;
+      height: 73%;
+      position: absolute;
+      top: 16%;
+      bottom: 0;
+      z-index: 1;
+      box-sizing: border-box;
+      h3{
+        color: @backgroundWhite;
+        text-align: center;
+        margin-top: 10px;
+      }
+      .red_pack{
+        text-align: center;
+        margin-top: 100px;
+        color: @backgroundWhite;
+      }
+      .red_but{
+        width: 75%;
+        margin: auto;
+        margin-top: 70px;
+        display: flex;
+        justify-content: space-between;
+        .back_home{
+          width: 100px;
+          height: 40px;
+          border-radius: 30px;
+          border:1px solid @pinkColor;
+          background-color: @whiteColor;
+          color: @pinkColor;
+        }
+        .get_now{
+          width: 100px;
+          height: 40px;
+          border-radius: 30px;
+          background-color: @pinkColor;
+          color: @whiteColor;
+          border: none;
+        }
+      }
+    }
+  }
+  .icongunbi_but{
+    text-align: center;
+    .guanbi_but{
+      z-index: 1;
+      color: @whiteColor;
+      font-size: 25px;
+    }
+  }
  }
 }
 // IndexEr
@@ -663,7 +740,6 @@
       flex-wrap: nowrap;
       align-items: center;
       overflow: hidden;
-      box-sizing: border-box;
       .head-portrait{
         width: 48px;
         height: 48px;
