--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -544,6 +544,45 @@
     }
   }
  }
+ .end-event{
+  width: 85%;
+  margin: 25% auto auto auto;
+  box-sizing: border-box;
+  padding: 10px 15px;
+  border-radius: 10px;
+  background-color: @whiteColor;
+  color: @greyColor;
+  h3{
+    text-align: center;
+    padding: 8px 0px;
+  }
+  .isState{
+    margin: 8px 0px;
+  }
+  .text{
+    white-space: normal;
+    word-wrap: break-word;
+    word-break: break-all;
+    text-align:left;
+    text-align: justify;
+    text-indent: 2em;
+    line-height: 25px;
+  }
+  .bottom-text{
+    text-align: right;
+  }
+  .ok-but{
+    width: 85%;
+    height: 40px;
+    line-height: 40px;
+    margin: 12px auto 8px auto;
+    border-radius: 5px;
+    color: @whiteColor;
+    text-align: center;
+    background-color: @backgroundBlue;
+    font-size: 15px;
+  }
+}
 }
 // IndexEr
 .index-er{
